# PyPatchMatch

./: CMakeLists.txt  LICENSE  README.md  build.sh  demo.ipynb  inpaint_mat.cpp  inpaint_mat.hpp  patchmatch_inpaint.pxd  patchmatch_inpaint.pyx  setup.py  test_patchmatch.py
source/: CMakeLists.txt  inpaint.c  main.c  maskedimage.c  nearestneighborfield.c  patchmatch.c
source/include/: defineall.h  patchmatch.h
